<resources>
  <string name="app_name">ToDoList</string>

  <string name="hello_world">Hello world!</string>
  <string name="title_activity_login">登陆</string>
  <string name="text_input_account">手机号/邮箱</string>
  <string name="text_input_password">8-32位密码</string>
  <string name="title_activity_project">项目</string>
  <string name="action_add">新增</string>
  <string name="action_refresh">刷新</string>
  <string name="button_delete">删除</string>
  <string name="button_cancel">取消</string>
  <string name="button_ok">确定</string>
  <string name="title_activity_add_project">新项目</string>
  <string name="title_activity_project_info">项目概要</string>
  <string name="text_project_id">项目编号</string>
  <string name="text_project_name">项目名称</string>
  <string name="text_project_task">总完成数/总任务数</string>
  <string name="text_project_created_at">创建时间</string>
  <string name="title_activity_rename_project">重命名</string>
  <string name="title_activity_task">任务列表</string>
  <string name="button_task_view">任务</string>
</resources>
