<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context="com.ifengxue.android.todolist.activity.ProjectInfoActivity">
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:layout_weight="2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/text_project_id"
      />
    <TextView
      android:id="@+id/text_project_id"
      android:layout_weight="3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:layout_weight="2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/text_project_name"
      />
    <TextView
      android:id="@+id/text_project_name"
      android:layout_weight="3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:layout_weight="2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/text_project_task"
      />
    <TextView
      android:id="@+id/text_project_task"
      android:layout_weight="3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:layout_weight="2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/text_project_created_at"
      />
    <TextView
      android:id="@+id/text_project_created_at"
      android:layout_weight="3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
      android:id="@+id/button_ok"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/button_ok"/>
  </LinearLayout>
</LinearLayout>
