<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.ifengxue.android.todolist.activity.LoginActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/text_input_account"
            android:text="18262471424"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:hint="@string/text_input_account"/>
        <EditText
            android:id="@+id/text_input_password"
            android:text="1234qwer"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:hint="@string/text_input_password"
            android:inputType="textPassword"/>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button_login"
                android:text="@string/title_activity_login"
                android:layout_width="match_parent"
                android:layout_height="48sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
